--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -27,6 +27,12 @@
             "twitter": "https://x.com/RELICSxyz",
             "image": "https://pbs.twimg.com/profile_images/1626414838686838784/MGEASos5_400x400.jpg",
             "stage": "Seed"
+        },{
+           "name": "FxHash",
+           "website":"https://www.fxhash.xyz/",
+           "twitter": "https://x.com/fx_hash_",
+           "image":"https://pbs.twimg.com/profile_images/1917558772316225536/q5A4S5Cb_400x400.jpg", 
+           "stage":"Purchase agreement"
         }
    ],
    "Echo": [
