--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -32,7 +32,7 @@
            "website":"https://www.fxhash.xyz/",
            "twitter": "https://x.com/fx_hash_",
            "image":"https://pbs.twimg.com/profile_images/1917558772316225536/q5A4S5Cb_400x400.jpg", 
-           "stage":"Purchase agreement"
+           "stage":"Seed"
         }
    ],
    "Echo": [
